quiero que el bot cumpla un flujo que se definira por el usuario, este flujo replecentara las tareas que debe realizar el bot en una conversacion de whatsapp, por ejemplo para una nueva conversacion: Saludo>consultar datos del cliente> escuchar lo que busca el cliente>Responder

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -123,6 +123,20 @@
     "keywordsLabel": "Keywords to Trigger Bot",
     "keywordsPlaceholder": "e.g., help, support, pricing",
     "keywordsHelpText": "Comma-separated keywords.",
+    "conversationFlow": {
+      "title": "Bot Conversation Flow",
+      "description": "Define the sequence of tasks or interactions the bot should perform during a conversation.",
+      "addStepPlaceholder": "Enter task name (e.g., Greet user)",
+      "addStepButton": "Add Task",
+      "removeStepButton": "Remove Task",
+      "emptyFlow": "No tasks defined yet. Add tasks to build the conversation flow.",
+      "exampleSteps": [
+        "Greet User",
+        "Consult Customer Data",
+        "Listen to Customer Needs",
+        "Respond"
+      ]
+    },
     "appointmentScheduling": {
       "title": "Appointment Scheduling Settings",
       "enableBotScheduling": "Enable Bot Scheduling",
