si esta bien pero me gustaria que fueran en razon de bandejas de filtros, por ejemplo, definri algo como nueva, saludo, captacion datos, cerrados, agendados, insistencia

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -89,9 +89,12 @@
     "searchPlaceholder": "Search chats...",
     "configureAIButtonLabel": "Configure AI Bots",
     "all": "All",
-    "work": "Work",
-    "friends": "Friends",
-    "unread": "Unread",
+    "new": "New",
+    "greeting": "Greeting",
+    "dataCapture": "Data Capture",
+    "closed": "Closed",
+    "scheduled": "Scheduled",
+    "followUp": "Follow-up",
     "noChatsYet": "No chats yet.",
     "noChatsInCategory": "No chats in {category}",
     "noChatsMatching": "No chats in {category} matching \"{searchTerm}\".",
