--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -89,9 +89,12 @@
     "searchPlaceholder": "Buscar chats...",
     "configureAIButtonLabel": "Configurar Bots de IA",
     "all": "Todos",
-    "work": "Trabajo",
-    "friends": "Amigos",
-    "unread": "No leídos",
+    "new": "Nueva",
+    "greeting": "Saludo",
+    "dataCapture": "Captación Datos",
+    "closed": "Cerrados",
+    "scheduled": "Agendados",
+    "followUp": "Insistencia",
     "noChatsYet": "Aún no hay chats.",
     "noChatsInCategory": "No hay chats en {category}.",
     "noChatsMatching": "No hay chats en {category} que coincidan con \"{searchTerm}\".",
