no me entendiste quiero que en la aplicacion aparezcan configurados por defecto las estapas del flujo de la conversacion que tu me has definido:
New,Greeting,Data Capture,Qualify,Scheduled,Closed,Follow-up

estos mismos y sus descripciones y que en cada fase, se vayan agregando instrucciones al promt inicial

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -140,10 +140,10 @@
         "new": "New",
         "greeting": "Greeting",
         "data_capture": "Data Capture",
-        "qualify": "Qualify",
-        "scheduled": "Scheduled",
-        "closed": "Closed",
-        "follow_up": "Follow-up"
+        "qualify": "Qualify Lead",
+        "scheduled": "Appointment Scheduled",
+        "closed": "Deal Closed/Lost",
+        "follow_up": "Follow-up Needed"
       }
     },
     "appointmentScheduling": {
